--- a/sys-power/powersave/files/powersaved.rc
+++ b/sys-power/powersave/files/powersaved.rc
@@ -1,7 +1,7 @@
 #!/sbin/runscript
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/powersave/files/powersaved.rc,v 1.1 2006/05/07 10:29:45 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/powersave/files/powersaved.rc,v 1.2 2007/05/28 17:48:23 genstef Exp $
 
 depend() {
 	need localmount dbus hald
@@ -12,7 +12,7 @@ start() {
 	ebegin "Starting powersave daemon"
 	start-stop-daemon --start --quiet --exec /usr/sbin/powersaved -- \
 		-d \
-		$([[ -S /var/run/acpid.socket ]] && echo "-f /var/run/acpid.socket")
+		$([ -S /var/run/acpid.socket ] && echo "-f /var/run/acpid.socket")
 	eend $?
 }
 
