--- a/media-sound/mpd/files/mpd.rc
+++ b/media-sound/mpd/files/mpd.rc
@@ -1,7 +1,7 @@
 #!/sbin/runscript
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/files/mpd-0.12.rc6,v 1.5 2007/03/25 17:07:53 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/files/mpd.rc,v 1.1 2007/05/28 21:59:00 ticho Exp $
 
 depend() {
 	need localmount
